week6/demo-k8s/demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: kevin-tranhuu
  labels: 
    name: demo-app
spec:
  replicas: 2
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-container
        image: kth844/demo:4
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /logs
            name: logs
      - name: promtail-container
        image: grafana/promtail
        args:
        - -config.file=/etc/promtail/promtail.yml
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
        - name: logs
          emptyDir: {}
        - name: promtail-config
          configMap:
            name: promtail-config
