week6/demo-k8s/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-app
  ports:
  - port: 8080
    targetPort: 8080
